implement eslint and fix errors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,5 @@ jobs:
           paths:
             - node_modules
           key: dependency-cache-{{ checksum "package-lock.json" }}
+      - run: npm run lint
       - run: npm test
