add postinstall task

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest --passWithNoTests",
     "lint": "eslint src/",
     "build": "rollup -c",
-    "watch": "rollup -cw"
+    "watch": "rollup -cw",
+    "postinstall": "npm run build"
   },
   "bin": {
     "swag": "./lib/swag.js"
