--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hrwg/swag",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Scaffolding CLI for Shopware 6 that creates plugins, elements and much more.",
   "main": "lib/index.js",
   "scripts": {
@@ -45,5 +45,16 @@
     "ora": "^4.0.2",
     "signale": "^1.4.0",
     "velocityjs": "^2.0.0"
-  }
+  },
+  "author": {
+    "name": "Rico Herwig",
+    "email": "rherwig4711@gmail.com"
+  },
+  "contributors": [
+    {
+      "name": "Patrick Hlustik",
+      "email": "patrick.hlustik@googlemail.com"
+    }
+  ],
+  "license": "MIT"
 }
